CSS: synth, fix text-overflow

--- a/src/css/synth.css
+++ b/src/css/synth.css
@@ -23,6 +23,7 @@
 .synth-head {
 	display: flex;
 	height: 36px;
+	line-height: 36px;
 	font-size: 14px;
 }
 
@@ -45,16 +46,7 @@
 	opacity: .8;
 }
 
-.synth-head::before,
-.synth-showBtn,
-.synth-name,
-.synth-menuBtn {
-	display: flex;
-	align-items: center;
-}
-
 .synth-showBtn {
-	justify-content: center;
 	border-right: 1px dashed;
 	color: rgba( 0, 0, 0, .25 );
 	background-color: rgba( 0, 0, 0, .1 );
@@ -64,6 +56,7 @@
 	color: rgba( 0, 0, 0, .6 );
 }
 .synth-showBtn::before {
+	display: block;
 	transition: inherit;
 	transition-property: transform;
 }
@@ -72,7 +65,6 @@
 }
 
 .synth-menuBtn {
-	justify-content: center;
 	font-size: 16px;
 	opacity: .5;
 	transition: opacity .1s;
